@@ -1582,8 +1582,7 @@ void Shape_chooser::drag_data_get
 			'/' << shinfo.framenum << ')' << endl;
 #ifdef WIN32
 	windragdata *wdata = (windragdata *)seldata;
-	wdata->data = buf;
-	wdata->id = info;
+	wdata->assign(info, len, buf);
 #else
 					// Make us owner of xdndselection.
 	gtk_selection_owner_set(widget, gdk_atom_intern("XdndSelection", 0),
